@@ -110,6 +110,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 13429) Separate date and time in message sp-newimages-showfrom
 * (bug 13137) Allow setting 'editprotected' right separately from 'protect', 	 
   so groups may optionally edit protected pages without having 'protect' perms
+* Disallow deletion of big pages by means of moving a page to its title and using the
+  "delete and move" option.
 
 
 === API changes in 1.13 ===
